--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,17 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=GMT%2B8
-    username: zhong
+    username: root
     password: 123456
   jpa:
     hibernate:
       ddl-auto: update #没有表新建，有表更新操作,控制台显示建表语句
     show-sql: true
   rabbitmq:
-    host: 127.0.0.1
+    host: 192.168.1.201
     port: 5672
-    username: guest
-    password: guest
+    username: zhong
+    password: 123456
     publisher-confirms: false
     publisher-returns: true
     listener:
@@ -19,15 +19,23 @@ spring:
         acknowledge-mode: manual
       simple:
         acknowledge-mode: manual
+  profiles:
+    active: hello-world,receiver
+
+logging:
+  level:
+    org: error
+
+tutorial:
+  client:
+    duration: 10000
+
+
 mq:
   exchange: mq.exchange
   ingate:
     queue: mq.ingate.queue
 
 
-
-
-
-
-
-
+server:
+  port: 8002
